--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,80 @@ Bellerin | Home
 
 <!-- CONTENT -->
 {% block content %}
-<div class="row">
-    
+<div class="container py-4">
+
+  <!-- MOBILE VERSION (Tabs) -->
+  <div class="d-lg-none">
+    <!-- Tabs Nav -->
+    <ul class="nav nav-pills nav-fill mb-3" id="mobileTabs" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="about-tab" data-bs-toggle="tab" data-bs-target="#aboutTab" type="button" role="tab">
+          About
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="features-tab" data-bs-toggle="tab" data-bs-target="#featuresTab" type="button" role="tab">
+          Features
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contactTab" type="button" role="tab">
+          Contact
+        </button>
+      </li>
+    </ul>
+
+    <!-- Tabs Content -->
+    <div class="tab-content" id="mobileTabsContent">
+      <div class="tab-pane fade show active" id="aboutTab" role="tabpanel">
+        <h2>About</h2>
+        <p>This is the About section, visible when you click the About tab.</p>
+      </div>
+      <div class="tab-pane fade" id="featuresTab" role="tabpanel">
+        <h2>Features</h2>
+        <p>Here you can describe the features of your app or product.</p>
+      </div>
+      <div class="tab-pane fade" id="contactTab" role="tabpanel">
+        <h2>Contact</h2>
+        <p>Contact form or info goes here.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- DESKTOP VERSION (All sections on one page) -->
+  <div class="d-none d-lg-block">
+    <div class="row">
+        <!-- WATCHING AND WATCHED -->
+        <div class="col-lg-8">
+
+            <div>
+
+            </div>
+        </div>
+
+        <!-- SEARCH AND RESULT -->
+        <div class="col-lg-4 d-flex flex-column" style="max-width: 360px;">
+            <!-- RESULT -->
+            <div hidden aria-hidden>
+                <img src="" alt="Anime Cover" class="">
+                <h2>Title</h2>
+                <p></p>
+            </div>
+
+            <!-- SEARCH -->
+            <div>
+                <form action="GET">
+                    <label for="query"></label>
+                        <input id="query" type="text">
+                    <input type="submit" value="Search!">
+                </form>
+            </div>
+        </div>
+
+
+    </div>
+  </div>
+
 </div>
 {% endblock %}
 
